[package]
name = "gbdt"
version = "0.1.0"
authors = ["Tongxin Li <litongxin@baidu.com>", "Tianyi Li <n0b0dypku@gmail.com>", "Yu Ding <dingelish@gmail.com>"]
homepage = "https://github.com/mesalock-linux/gbdt-rs"
repository = "https://github.com/mesalock-linux/gbdt-rs"
license = "Apache-2.0"
description = "A implementation of Gradient Boosting Regression Tree in Rust programming language"
edition = "2018"
exclude = ["/sgx/*", "/dataset/*", "xgb-data/*"]

[features]
default = ["mesalock_sgx"]
enable_training = ["rand"]
profiling = ["time"]
input = ["regex"]
mesalock_sgx = ["sgx_tstd"]

[badges]

[lib]
name = "gbdt"
crate-type = ["rlib", "staticlib"]

[dependencies]
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
rand = { version = "0.7", optional = true, git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.6.5_sgx1.1.0" }
regex = { version = "1", git = "https://github.com/mesalock-linux/regex-sgx", optional = true }
time = { version = "0.1", optional = true }
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk", optional = true }
cfg-if = "0.1"

[dev-dependencies]
time = "0.1"
