[package]
name = "gbdt"
version = "0.1.1"
authors = ["Tongxin Li <litongxin@baidu.com>", "Tianyi Li <n0b0dypku@gmail.com>", "Yu Ding <dingelish@gmail.com>"]
homepage = "https://github.com/mesalock-linux/gbdt-rs"
repository = "https://github.com/mesalock-linux/gbdt-rs"
license = "Apache-2.0"
description = "A implementation of Gradient Boosting Regression Tree in Rust programming language"
edition = "2018"

include = [
    "LICENSE",
    "Readme.md",
    "Cargo.toml",
    "src/*.rs",
    "examples/*.rs",
]

[features]
default = ["enable_training", "input"]
enable_training = []
input = ["regex"]

[badges]

[lib]
name = "gbdt"
crate-type = ["rlib", "staticlib"]

[dependencies]
rand="0.8.5"
serde = {version = "1.0.155", features = ["derive"]}
serde_json = "1.0.94"
regex = { version = "1.7.1", optional = true }
cfg-if = "1.0.0"
rayon = "1.7.0"

