[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "gbdtenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
gbdt_sgx = { path = "../../gbdt-sgx", default-features = false, features = ["mesalock_sgx", "input", "enable_training"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tunittest = { rev = "v1.1.3", git = "https://github.com/baidu/rust-sgx-sdk.git" }
